# byok-merida

./: .env.example  .gitignore  CONTEXT-MAP.md  LICENSE  README.md  eslint.config.js  openapi-ts.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.final.json
apps/api/: pyproject.toml
apps/api/merida_api/: __init__.py  app.py  cli.py  matching.py
apps/api/merida_api/core/: __init__.py  auth.py  settings.py
apps/api/merida_api/features/: __init__.py
apps/api/merida_api/features/applications/: __init__.py  analysis.py  analysis_graph.py  analysis_model.py  capture.py  capture_matches.py  ports.py  schemas.py  workspace.py
apps/api/merida_api/integrations/: __init__.py  deepseek.py  deepseek_analysis.py  deepseek_resume.py  demo_models.py  demo_workspace.py  notion_workspace.py  pdf_export.py
apps/api/merida_api/matching/: __init__.py  skill_normalization.v1.json
apps/api/merida_api/shared/: __init__.py  execution.py  observability.py  pagination.py  prompt_payload.py  recovery.py  schemas.py  workspace.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: conftest.py  test_capture_matches.py  test_deepseek_analysis.py  test_deepseek_resume.py  test_execution_recovery.py  test_final_behavior_contract.py  test_notion_workspace.py  test_pdf_export.py  test_prompt_payload.py  test_public_contract.py  test_target_parity_manifest.py
apps/api/tests/fakes/: __init__.py  app.py  models.py  workspace.py
apps/api/tests/fixtures/: final-parity.v1.json  matching.v1.json  target-parity.v1.json  workspace.v1.json
docs/: README.md  routes.md  (+8 more)
(+242 files in other folders)
