[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "merida-api"
version = "0.1.0"
requires-python = ">=3.10,<3.15"
dependencies = [
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "langchain-deepseek==1.1.0",
  "langgraph==1.2.8",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "uvicorn[standard]==0.51.0",
]

[dependency-groups]
dev = [
  "pytest==8.4.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["merida_api*"]

[tool.setuptools.package-data]
"merida_api.matching" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
